Ensure wikidata icon remains aligned with property link
Adds "align-items: baseline" to the .wbmi-entity-data element. This ensures
that the property link and the wikidata icon remain aligned even if the overall
header of a statement widget becomes taller (due to the addition of extra label
text beneath the property title, for example).

Bug: T223655

--- a/resources/statements/StatementWidget.less
+++ b/resources/statements/StatementWidget.less
@@ -94,6 +94,7 @@
 	.wbmi-entity-data {
 		.flex-display();
 		.flex(1, 1, 0, 0);
+		align-items: baseline;
 
 		.wbmi-entity-title {
 			.flex(1, 1, 0, 0);
